# enterprise-knowledge-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
configs/: claude_desktop_config.json  observability.yaml
configs/llm_configs/: default.yaml
deployment/docker/: Dockerfile  Dockerfile.dev
deployment/docker-compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
deployment/docker-compose/prometheus/: prometheus.yml
deployment/kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  infrastructure.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
deployment/scripts/: docker-entrypoint.sh
examples/: hybrid_search_demo.py
examples/clients/: sse_client.py
examples/frontend/: chat-demo.html
examples/sample_documents/hr_policies/: remote_work_guidelines.md  vacation_policy.md
scripts/: check_kb_status.py  debug_embedder.py  deep_trace.py  diagnose_chat.py  ingest_all_samples.py  quick_qdrant_test.py  test_api_key_direct.py  test_docker_local.sh  test_kubernetes.sh  test_mcp_server.py  test_openai_connection.py  test_phase5_observability.py  test_query_router.py  test_rag_pipeline.py  test_react_interactive.py  test_tool_config.py  test_vector_vs_hybrid.py  validate_docker_configs.py  validate_kubernetes.py  validate_phase6.py
src/: cli.py  config.py
src/agent/react/: __init__.py  action_executor.py  base.py  react_engine.py  thought_generator.py
src/agent/router/: __init__.py  base.py  intent_classifier.py  query_router.py
src/agent/tools/: __init__.py  admin_tools.py  base.py  knowledge_tools.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py  auth.py  logging.py  reate_limit.py
src/api/routes/: __init__.py  chat.py  health.py  ingest.py  search.py
src/api/schemas/: __init__.py  chat.py  common.py  ingest.py  search.py
src/api/streaming/: __init__.py  events.py  manager.py  sse.py
src/llm/: __init__.py  base.py  exceptions.py  factory.py
src/llm/providers/: __init.py  __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
src/mcp_server/: server.py
src/observability/: __init__.py  base.py
src/observability/benchmarks/: __init__.py  results.py  runner.py  scenarios.py
src/observability/evaluation/: __init__.py  datasets.py  ragas.py  reports.py
src/observability/metrics/: __init__.py  collectors.py  prometheus.py
src/observability/tracing/: __init__.py  phoenix.py  spans.py
src/rag/: types.py
src/rag/generation/: __init__.py  synthesizer.py
src/rag/ingestion/: __init__.py  base_chunker.py  base_loader.py  chunkers.py  fixed_size_chunker.py  loaders.py  pdf_loader.py  pipeline.py  text_loader.py  (+2 more)
tests/: test_tools_interactive.py
tests/integration/: conftest.py  test_phase5_integration.py  test_react_integration.py
tests/unit/: test_agent_tools.py  test_chunkers.py  test_phase2.py  test_phase4_api.py  test_phase4_llm.py  test_phase5_base.py  test_phase5_evaluation.py  test_phase5_metrics.py  test_react_base.py
(+13 files in other folders)
